src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Sellable_Area_Resellers_Distributors__c</fullName>
        <inlineHelpText>Area into which I am eligible to sell the hardware</inlineHelpText>
        <label>Hardware Sellable Area</label>
        <picklist>
            <controllingField>Partner_Region__c</controllingField>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antilles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Service_Sales__c</fullName>
        <description>% Service Sales</description>
        <label>% Service Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Site_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Site Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Siebel_Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Siebel Row Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_SF_ID__c</fullName>
        <label>Siebel SF ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Key__c</fullName>
        <description>For Phase 4 Site Key of E to E survivor from Trilogy DF</description>
        <label>Site_Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_Developers__c</fullName>
        <description># Software Developers</description>
        <label># Software Developers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Software_Sales__c</fullName>
        <description>% Software Sales</description>
        <label>% Software Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Strategic_Account_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strategic Account Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strategic_Account_Formula__c</fullName>
        <formula>Strategic_Account_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategic Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <description>List the strengths of the account</description>
        <label>Strengths</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supplies_Converter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Type of customer that converts supplies</description>
        <label>Supplies Converter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplies_Sales__c</fullName>
        <description>% Supplies Sales</description>
        <label>% Supplies Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SyncOppNonAITAcc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SyncOppNonAITAcc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox it you are the owner on the respective account and this is considered one of your &quot;Target Accounts.&quot;</description>
        <label>Target Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_support_phone_number__c</fullName>
        <label>Tech Support Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Technical_Support_Resources__c</fullName>
        <description># Technical Support Resources</description>
        <label># Technical Support Resources</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tele_Inside_Sales__c</fullName>
        <description>Tele/Inside Sales %</description>
        <label>Tele/Inside Sales %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Third_Party_Id__c</fullName>
        <label>Third Party Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party__c</fullName>
        <label>Third Party</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Threats__c</fullName>
        <description>list threats within the account</description>
        <label>Threats</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tier_1_PE_Program_Information__c</fullName>
        <label>Tier 1 PE Program Information</label>
        <summaryFilterItems>
            <field>PE_Program_Information__c.Purchasing_Method__c</field>
            <operation>equals</operation>
            <value>Tier 1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>PE_Program_Information__c.Track__c</field>
            <operation>notEqual</operation>
            <value>Radio</value>
        </summaryFilterItems>
        <summaryForeignKey>PE_Program_Information__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tier_1_do_not_Auto_transition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tier 1, do not Auto-transition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier_2_PE_Program_Information__c</fullName>
        <label>Tier 2 PE Program Information</label>
        <summaryFilterItems>
            <field>PE_Program_Information__c.Purchasing_Method__c</field>
            <operation>equals</operation>
            <value>Tier 2</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>PE_Program_Information__c.Track__c</field>
            <operation>notEqual</operation>
            <value>Radio</value>
        </summaryFilterItems>
        <summaryForeignKey>PE_Program_Information__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Time_Difference__c</fullName>
        <formula>(NOW() - CreatedDate)*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transition_Completed_Date__c</fullName>
        <label>Transition Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transition_Contact_Language__c</fullName>
        <label>Transition Contact Language</label>
        <picklist>
            <controllingField>Partner_Region__c</controllingField>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese (Brazilian)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (Simplified)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turkish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish (Mexico)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transition_Contact__c</fullName>
        <label>Transition Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Transition_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transition Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transition_Start_Date__c</fullName>
        <label>Transition Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Translated_Name_Formula__c</fullName>
        <formula>Translated_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Translated Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Translated_Name__c</fullName>
        <label>Translated Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Proposition__c</fullName>
        <description>List the customers value proposition or key differentiator.</description>
        <label>Value Proposition</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vertex_Bill_To__c</fullName>
        <inlineHelpText>The postal code needs to be entered into this field for U.S. addresses to do a look-up and retrieve the proper address information for tax purposes.</inlineHelpText>
        <label>Billing Postcode Lookup</label>
        <referenceTo>Vertex_Validation_Postal_Code__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vertical_Market_Focus__c</fullName>
        <label>Vertical Market Focus</label>
        <picklist>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Mobility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial (Finance)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil and Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecommunications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation (Travel)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Vertical_Segment__c</fullName>
        <label>Vertical Segment</label>
        <picklist>
            <controllingField>Industry</controllingField>
            <picklistValues>
                <fullName>Primary Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Administration and Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State and Local Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blood Banks and Donation Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medical Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laboratories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long-term Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Order Pharmacies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third-party Pharmaceutical Repackagers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterinary Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amusement Parks Museums and Zoos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lodging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking Lots/Garages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurants and Bars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theaters and Cinemas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forestry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Products</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <description>enter weaknesses of the account</description>
        <label>Weaknesses</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZEB_Account_Organization_Image__c</fullName>
        <formula>IF( Organization__c = &apos;Zebra NALA&apos;, IMAGE(&quot;/servlet/servlet.ImageServer?id=015i0000004EE8p&amp;oid=00D560000008iX6&quot;, &quot;Zebra NALA&quot;), 
IF( Organization__c = &apos;Zebra EMEA&apos;, IMAGE(&quot;/servlet/servlet.ImageServer?id=015i0000004EE99&amp;oid=00D560000008iX6&quot;, &quot;Zebra EMEA&quot;), IF( Organization__c = &apos;Zebra APAC USD&apos;, IMAGE(&quot;/servlet/servlet.ImageServer?id=015i0000004EE9J&amp;oid=00D560000008iX6&quot;, &quot;Zebra APAC USD&quot;), IF( Organization__c = &apos;Zebra APAC RMB&apos;, IMAGE(&quot;/servlet/servlet.ImageServer?id=015i0000004EE9d&amp;oid=00D560000008iX6&quot;, &quot;Zebra APAC RMB&quot;), null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_FinStat_Calc__c</fullName>
        <description>Calculation field, combines Account Financial Status with Account Status. Used as a field in the Search results</description>
        <formula>TEXT(Account_Status__c) + &apos; &apos; + IF(Financial_Customer_Flag__c = True, &quot;Financial&quot;, &quot;Non-Financial&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_ISV_High_Touch_Flag__c</fullName>
        <description>Display TRUE if this Account has an ISV Premier or Advanced Partner Program membership</description>
        <formula>IF (ZEB_ISV_High_Touch__c &gt; 0, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISV High Touch Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZEB_ISV_High_Touch__c</fullName>
        <description>Roll-up summary field, meant to determine count of ISV Premier and Advanced Partner programs associated with an Account</description>
        <label>ISV High Touch</label>
        <summaryFilterItems>
            <field>Partner_Program_Membership__c.Program_Name__c</field>
            <operation>equals</operation>
            <value>ISV Premier, ISV Advanced</value>
        </summaryFilterItems>
        <summaryForeignKey>Partner_Program_Membership__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ZEB_NCR_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCR Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZEB_No_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag should be set to ‘Y’ when data is loaded using dataloader
Informatica SPI process will be modified to add a condition not to sync to Siebel if the no sync flag is set to ‘Y’</description>
        <label>ZEB No Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZEB_Status_Change_Reason__c</fullName>
        <label>Status Change Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_Unique_Account_Number__c</fullName>
        <label>ZEB Unique Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_Vertex_Bill_City__c</fullName>
        <formula>Vertex_Bill_To__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZEB Vertex Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_Vertex_Bill_County__c</fullName>
        <formula>Vertex_Bill_To__r.County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZEB Vertex Bill County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_Vertex_Bill_State__c</fullName>
        <formula>Vertex_Bill_To__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZEB Vertex Bill State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_Vertex_Bill_Zip__c</fullName>
        <formula>Vertex_Bill_To__r.Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZEB Vertex Bill Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zebra_Product_Focus__c</fullName>
        <label>Zebra Product Focus</label>
        <picklist>
            <picklistValues>
                <fullName>Aftermarket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiosk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tabletop</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>accepted_leads__c</fullName>
        <label># Accepted Leads</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>assigned_leads__c</fullName>
        <label># Assigned Leads</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__FolderID__c</fullName>
        <description>This field is used to store the folder id when the files are uploaded to BOX</description>
        <label>FolderID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__RelatedLeadId__c</fullName>
        <label>RelatedLeadId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>briefingedge__Primary_Contact__c</fullName>
        <label>Primary Contact (Optional)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>of_Active_Complementary_Partner__c</fullName>
        <label># of Active Complementary Partner</label>
        <summaryFilterItems>
            <field>Program_Membership_Information__c.Category__c</field>
            <operation>equals</operation>
            <value>Complementary Partner</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Program_Membership_Information__c.Member_Status__c</field>
            <operation>equals</operation>
            <value>Current Member</value>
        </summaryFilterItems>
        <summaryForeignKey>Program_Membership_Information__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Active_Distributor__c</fullName>
        <label># of Active Distributor</label>
        <summaryFilterItems>
            <field>Program_Membership_Information__c.Category__c</field>
            <operation>equals</operation>
            <value>Distributor</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Program_Membership_Information__c.Member_Status__c</field>
            <operation>equals</operation>
            <value>Current Member</value>
        </summaryFilterItems>
        <summaryForeignKey>Program_Membership_Information__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Active_Ent_Technologies__c</fullName>
        <label># of Active Ent Technologies</label>
        <summaryFilterItems>
            <field>PE_Program_Detail__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>PE_Program_Detail__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Active_Enterprise_Technologies__c</fullName>
        <description>This field stores the number of active enterprise technologies</description>
        <label># of Active Enterprise Technologies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Active_PMI__c</fullName>
        <label># of Active PMI</label>
        <summaryFilterItems>
            <field>Program_Membership_Information__c.Category__c</field>
            <operation>equals</operation>
            <value>Complementary Partner, Distributor, Reseller</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Program_Membership_Information__c.Member_Status__c</field>
            <operation>equals</operation>
            <value>Current Member</value>
        </summaryFilterItems>
        <summaryForeignKey>Program_Membership_Information__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Active_Reseller__c</fullName>
        <label># of Active Reseller</label>
        <summaryFilterItems>
            <field>Program_Membership_Information__c.Category__c</field>
            <operation>equals</operation>
            <value>Reseller</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Program_Membership_Information__c.Member_Status__c</field>
            <operation>equals</operation>
            <value>Current Member</value>
        </summaryFilterItems>
        <summaryForeignKey>Program_Membership_Information__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Ent_Technologies__c</fullName>
        <label># of Ent Technologies</label>
        <summaryForeignKey>PE_Program_Detail__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Enterprise_Technologies__c</fullName>
        <description>This field stores the number of enterprise technologies</description>
        <label># of Enterprise Technologies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>Contracting_Parties</fullName>
        <active>true</active>
        <description>Apttus will be using the Contracting Parties account record type.</description>
        <label>Contracting Parties</label>
    </recordTypes>
    <recordTypes>
        <fullName>End_User_Accounts</fullName>
        <active>true</active>
        <description>Users of Zebra Solutions either requesting Directly or through the Channel</description>
        <label>End User Accounts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Financial_End_User_Accounts</fullName>
        <active>true</active>
        <description>This Record Type is used for Financial End User Accounts</description>
        <label>Financial End User Accounts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Financial_Non_Classified_Resellers</fullName>
        <active>true</active>
        <description>This Record Type is used for Financial Non-Classified Reseller Accounts</description>
        <label>Financial Non-Classified Resellers</label>
    </recordTypes>
    <recordTypes>
        <fullName>Financial_Partners</fullName>
        <active>true</active>
        <description>This Record Type is used for Financial Partner Accounts</description>
        <label>Financial Partners</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Classified_Resellers</fullName>
        <active>true</active>
        <description>A Third Party selling Zebra’s Solutions who are not a member of any Partner Program</description>
        <label>Non-Classified Resellers</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partners</fullName>
        <active>true</active>
        <description>This Record Type is used for Partner Accounts</description>
        <label>Partners</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect</fullName>
        <active>true</active>
        <description>Potential New End Users who are evaluating the options to use Zebra’s Solutions</description>
        <label>Prospect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Zebra_legal_entities</fullName>
        <active>true</active>
        <description>Apttus will be using the Zebra legal entities account record type.</description>
        <label>Zebra Legal Entities</label>
    </recordTypes>
    <validationRules>
        <fullName>Account_Name_Field_Restriction</fullName>
        <active>true</active>
        <description>This rule will restrict individuals from making account changes to specified named accounts.</description>
        <errorConditionFormula>AND(Financial_Customer_Flag__c = TRUE,
   ISCHANGED(Name),
   AND( $Profile.Name  &lt;&gt;  &quot;System Administrator&quot;,$Profile.Name  &lt;&gt;  &quot;Partner Admin&quot;,$Profile.Name  &lt;&gt;  &quot;Partner Admin Community Login&quot; )
)</errorConditionFormula>
        <errorDisplayField>accepted_leads__c</errorDisplayField>
        <errorMessage>Account Name cannot be modified for Financial Accounts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_Name_Length_Exceeding_Siebel_Len</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(Name) &gt; 100 &amp;&amp;  $Profile.Name &lt;&gt; &quot;System Administrator&quot;</errorConditionFormula>
        <errorMessage>The Account Name length Cannot exceed 100 characters.</errorMessage>
    </validationRules>
</CustomObject>